# libcel

./: README.md  meson.build
.github/workflows/: main.yml
include/: cel_json.h  cel_parse.h  cel_tlv.h  cel_types.h  meson.build
src/: cel_io.c  cel_io.h  cel_json_utils.c  cel_json_utils.h  cel_strings.c  cel_strings.h  json.c  meson.build  parse.c  tlv.c
test/: meson.build  test_json.c  test_parse.c  test_tlv.c
test/data/: bad_cel.json  bad_cel_version.json  bad_digests.json  bad_event.json  bad_ima_template.json  bad_pcclient.json  bad_state_trans.json  binary_bios_measurements.b64  binary_runtime_measurements.b64  cel_multi.json  cel_multi_numbers.json  cel_version.json  ima_template.json  pcclient.json  pcclient_numbers.json  systemd-seq.json  systemd.json  systemd_bad_bootid.json  systemd_bad_event_type.json  systemd_bad_event_type_json_type.json  systemd_bad_event_type_num.json  systemd_bad_event_type_str.json  systemd_bad_timestamp.json  systemd_missing_event_type.json  systemd_missing_string.json
